# Multi-Agent-Interview-Coach

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .safety-policy.yml  DOC.md  Dockerfile  Dockerfile.gradio  README.dev.md  README.md  default.conf  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: governance.md  product-proposal.md  system-design.md
docs/diagrams/: c4-component.md  c4-container.md  c4-context.md  data-flow.md  deployment.md  sequence-user-interaction.md  workflow.md
docs/specs/: agent-orchestrator.md  api-versioning.md  capacity-planning.md  memory-context.md  observability-evals.md  retriever.md  serving-config.md  tools-apis.md
grafana-Loki/: compose.yml  loki-snippet.yml
grafana-Loki/grafana/: update_dashboards.sh
grafana-Loki/grafana/dashboards/: docker-monitoring.json
grafana-Loki/grafana/provisioning/dashboards/: dashboards.yml
grafana-Loki/grafana/provisioning/datasources/: datasources.yml
grafana-Loki/loki/: loki-config.yaml
llm-gateway-litellm/: .env.example  .gitignore  README.md  config.yaml  docker-compose.yml
security-tests/: .env.example  llamator.ipynb
security-tests-llamator/: .env.example  README.md  llamator.ipynb
src/app/: __init__.py  gradio_main.py  main.py
src/app/agents/: __init__.py  base.py  evaluator.py  interviewer.py  observer.py
src/app/agents/prompts/: __init__.py  evaluator_prompt.py  interviewer_prompt.py  observer_prompt.py
src/app/api/v1/: __init__.py
src/app/core/: __init__.py  config.py  constants.py  logger_setup.py  setup.py
src/app/core/exceptions/: __init__.py  base_exceptions.py
src/app/interview/: __init__.py  logger.py  session.py
src/app/llm/: __init__.py  cache.py  circuit_breaker.py  client.py  models.py  response_parser.py
src/app/middleware/: __init__.py  client_cache_middleware.py
src/app/observability/: __init__.py  alerts.py  langfuse_client.py
src/app/schemas/: EnvironmentOption.py  __init__.py  agent_settings.py  feedback.py  interview.py
src/app/ui/: __init__.py  gradio_app.py  styles.py
src/app/utils/: __init__.py  cache.py  filename.py  url.py
tests/: conftest.py  test_alerts.py  test_circuit_breaker.py  test_llm_cache.py
