[tool.poetry]
name = "multi-agent-interview-coach"
version = "0.1.0"
description = "Multi-Agent Interview Coach - система технического интервью с AI-агентами"
authors = ["Roman Neronov <roman.nieronov@gmail.com>"]
maintainers = ["Roman Neronov <roman.nieronov@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]
keywords = ["python", "ai", "interview", "agents", "llm"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.115.14"
uvicorn = { extras = ["standard"], version = "0.34.3" }
gunicorn = "^23.0"
pydantic = "^2.7"
httpx = "^0.28"
python-dotenv = "^1.0"
pydantic-settings = "^2.9.1"
python-multipart = "^0.0.20"
python-docx = "1.2.0"
redis = "^5.3.0"
gradio = "^5.0"
nest-asyncio = "^1.6.0"
langfuse = "^2.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
pytest = "^7.4.4"
pytest-asyncio = "^0.23.0"
black = "23.12.1"
isort = "5.13.2"
flake8 = "7.1.0"
mypy = "1.8.0"
pylint = "3.0.3"
coverage = "^7.2"
safety = "^2.3.0"

[tool.poetry.scripts]
interview-coach = "app.gradio_main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/docs
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 90
split_on_trailing_comma = true
lines_between_types = 1
combine_as_imports = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_first_party = ["src", "tests"]
known_third_party = ["fastapi", "pydantic", "sqlalchemy", "uvicorn", "pandas", "numpy", "gradio", "httpx", "langfuse"]

[tool.flake8]
max-line-length = 90
extend-ignore = ["E203", "E501", "W503", "B950"]
max-complexity = 12
select = ["B", "C", "E", "F", "W", "B9"]
per-file-ignores = [
    "__init__.py:F401",
    "tests/*:S101"
]
count = true
statistics = true
show-source = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning"
]
